Terminei meu site

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a href="#habilidades"> habilidades </a>
             <a href="#projetos"> Projetos </a>
             <a href="#contato"> Contatos </a>
+            <a href="www.google.com">google</a>
         </nav>
     </header>
     
